core/tests/integration/typecheck/fail/mismatch_array_typed_entry.ncl
# test.type = 'error'
# eval = 'typecheck'
# 
# [test.metadata]
# error = 'TypecheckError::TypeMismatch'
#
# [test.metadata.expectation]
# expected = 'String'
# found = 'Dyn'
[(1 : String), true, "b"] : Array Dyn